[package]
name = "nloxide"
version = "0.1.0"
edition = "2021"
description = "Clean-room libnl-3/libnl-genl-3 compatibility layer for jonerix nl80211 users"
license = "BSD-2-Clause"

[lib]
name = "nloxide"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = { version = "0.2", default-features = false }

[profile.release]
opt-level = 2
strip = false
